# blueye-ros2-pkg

./: .gitmodules  README.md
blueye_controls_gui_plugin/: package.xml  plugin.xml  setup.cfg  setup.py
blueye_controls_gui_plugin/blueye_controls_gui_plugin/: my_module.py
blueye_controls_gui_plugin/resource/: blueye_param_dashboard_gui.ui  icons.qrc
blueye_controls_gui_plugin/scripts/: blueye_controls_gui_plugin.py
blueye_ros2_interface/: README.md  package.xml  setup.cfg  setup.py
blueye_ros2_interface/blueye_ros2_interface/: blueye_interface.py  blueye_joystick.py  blueye_minimal.py  oculus_sonar.py
blueye_ros2_interface/config/: blueye_ros2_params.yaml  blueye_rqt_gui.perspective  gstreamer_node_params.yaml  gstreamer_topside_node_params.yaml  joystick_node_params.yaml  ros2_interface_node_params.yaml
blueye_ros2_interface/launch/: sonar.launch.xml  start_blueye_interface.launch.py  start_blueye_interface_bttm_side.launch.py  start_blueye_interface_top_side.launch.py  start_blueye_interface_top_side_with_gscam_node.launch.py
blueye_ros2_interface/scripts/: blueye_ros.py  image_processing.py
blueye_ros2_msgs/: CMakeLists.txt  package.xml
blueye_ros2_msgs/msg/: BlueyeCameraParams.msg
